[package]
name = "ci_cgi"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

#[workspace]
#members = ["get-test-job", "ci-cgi"]

[dependencies]
cgi = "0.6"
git2 = { version = "0.16", default-features = false }
querystring = "1.1.0"
multimap = "0.8.3"
die = "0.2.0"
libc = "0.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_derive = "1.0.145"
regex = "1"
memoize = "0.3.1"
glob = "0.3.0"
clap = { version = "4.0.32", features = ["derive"] }
file-lock = "2.1.6"
capnp = "0.21.*"
anyhow = "1.0.71"
chrono = "0.4.26"
memmap = "0.7.0"
serde_json = "1.0.132"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "rustls-tls"] }
brotli = "7"
flate2 = "1"
quick-xml = "0.36"
tar = "0.4"
zstd = "0.13"
json-five = "0.3"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
nix-nar = "0.4"
lzma-rs = "0.3"
rand = "0.8"
hostname = "0.4"
jobkit = { git = "https://evilpiepirate.org/git/jobkit.git" }

[build-dependencies]
capnpc = "0.21.*"

# Develop jobkit in-tree: build against the local checkout rather than
# the published git rev.
[patch."https://evilpiepirate.org/git/jobkit.git"]
jobkit = { path = "/home/kent/jobkit" }
