[package]
name = "ci_cgi"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

#[workspace]
#members = ["get-test-job", "ci-cgi"]

[dependencies]
cgi = "0.8"
git2 = { version = "0.21", default-features = false }
querystring = "1.1.0"
libc = "0.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_derive = "1.0.145"
regex = "1"
glob = "0.3.0"
clap = { version = "4.0.32", features = ["derive"] }
file-lock = "2.1.6"
capnp = "0.25.*"
anyhow = "1.0.71"
chrono = "0.4.26"
memmap = "0.7.0"
serde_json = "1.0.132"
reqwest = { version = "0.12.*", default-features = false, features = ["blocking", "rustls-tls"] }
brotli = "8"
flate2 = "1"
quick-xml = "0.40"
tar = "0.4"
zstd = "0.13"
json-five = "0.3"
walkdir = "2"
sha2 = "0.11"
hex = "0.4"
nix-nar = "0.4"
lzma-rs = "0.3"
jobkit = { git = "https://evilpiepirate.org/git/jobkit.git" }

[build-dependencies]
capnpc = "0.25.*"
