[package]
name = "ci_cgi"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

#[workspace]
#members = ["get-test-job", "ci-cgi"]

[dependencies]
cgi = "0.8"
git2 = { version = "0.21", default-features = false }
querystring = "1.1.0"
libc = "0.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_derive = "1.0.145"
regex = "1"
glob = "0.3.0"
clap = { version = "4.0.32", features = ["derive"] }
file-lock = "2.1.6"
capnp = "0.25.*"
anyhow = "1.0.71"
chrono = "0.4.26"
memmap = "0.7.0"
serde_json = "1.0.132"
reqwest = { version = "0.12.*", default-features = false, features = ["blocking", "rustls-tls"] }
json-five = "0.3"
brotli = "8"
# The distro kernel fetcher is its own crate now (single source of truth,
# consumed by ktest and bcachefs-module-server). Its deps (reqwest, the
# decompression/archive crates, etc.) come with it, so they're dropped here.
distro-kernel-fetcher = { git = "https://evilpiepirate.org/git/distro-kernel-fetcher.git" }
jobkit = { git = "https://evilpiepirate.org/git/jobkit.git" }

[build-dependencies]
capnpc = "0.25.*"
