#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(m4_esyscmd([echo -n $PACKAGE]), m4_esyscmd([echo -n $DATERA_VERSION]), m4_esyscmd([echo -n $SUPPORT_EMAIL]))
LT_INIT
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h])

m4_include([../BTools/cscript/ccpp.m4])

AC_CONFIG_FILES([Makefile 
                 ])
AC_OUTPUT

