[package]
name = "ci_cgi"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

#[workspace]
#members = ["get-test-job", "ci-cgi"]

[dependencies]
cgi = "0.6"
git2 = "0.16"
querystring = "1.1.0"
multimap = "0.8.3"
die = "0.2.0"
libc = "0.2"
toml = "0.5.9"
serde = "1.0.145"
serde_derive = "1.0.145"
regex = "1"
memoize = "0.3.1"
glob = "0.3.0"
clap = { version = "4.0.32", features = ["derive"] }
file-lock = "2.1.6"
capnp = "0.17.0"

[build-dependencies]
capnpc = "*"
